# cocodetect-trainer

./: .gitignore  best_result.txt  pyproject.toml
src/: decode.py  diagnose_overfitting.py  inference.py  inference_v2.py  inference_v3.py  train.py  train_improved.py  train_v2.py  train_v3.py
src/chatgpt/: inference.py  train.py
