[project]
name = "coconut_sorter_trainer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Clarence Manuel", email = "rencedm112@gmail.com"},
]
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "numpy>=2.3.5",
    "scikit-learn>=1.8.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "openpyxl>=3.1.5",
    "onnxruntime>=1.23.2",
    "pydub>=0.25.1"

]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
train = "python src/train.py"
train_improved = "python src/train_improved.py"
diagnose_overfitting = "python src/diagnose_overfitting.py"
inference = "python src/inference.py"
decode = "python src/decode.py"
